<resources>
    <string name="app_name">Pacemaker</string>
    <string name="email">colmcarew2@gmail.com</string>

    <string name="enter_activity_details">Enter Activity Details</string>
    <string name="activityTypeHint">Enter Activity type...</string>
    <string name="activityLocationHint">Enter Location...</string>
    <string name="activityDurationHint">01:00</string>
    <string name="distanceLabel">Distance (km)</string>
    <string name="create_activity">Create Activity</string>
    <string name="update_activity">Update Activity</string>
    <string name="activities">Activities</string>
    <string name="list_activities">Activities</string>
    <string name="list_of_activities">List of Activities</string>
    <string name="suggested_workouts">Suggested Workouts</string>
    <string name="suggested_workout">Suggested Workout</string>

    <string name="welcomeLogin">Login</string>
    <string name="welcomeSignup">Sign up</string>

    <string name="signupTitle">Sign up for the Pacemaker</string>
    <string name="signupSubtitle">Enter details below</string>
    <string name="signupFirstname">First name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupRegister">Register</string>

    <string name="loginTitle">Login to Pacemaker</string>
    <string name="loginSubtitle">You must be reigstered</string>
    <string name="loginSignin">Sign in</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="title_activity_show_my">ShowMyActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="options">Options</string>
    <string name="title_activity_friends_list">Users</string>
    <string name="add_friends">Add Friends</string>

    <string name="friends">Friends</string>
    <string name="pending_friends">Pending Friends</string>
    <string name="compare">Compare Workouts</string>
    <string name="logout">Logout</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="uploadProfilePhoto">Upload Profile Photo</string>
    <string name="submit">Submit</string>
    <string name="loseWeight">Lose Weight</string>
    <string name="buildMuscle">Build Muscle</string>
    <string name="improveFitness">Improve Fitness</string>
    <string name="finishedActivities">Finished Activities</string>
    <string name="progressReport">Progress Report</string>
    <string name="progressReports">Progress Reports</string>
    <string name="lastWeekWorkout">Results of Last Week of workouts</string>
    <string name="lastMonthWorkout">Results of Last Month of workouts</string>
    <string name="OverallWorkout">Results of overall workouts</string>
</resources>
