<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="Activities">
            <menu>
                <item
                    android:id="@+id/activitiesList"
                    android:icon="@drawable/activity"
                    android:title="List of Activites" />
                <item
                    android:id="@+id/createActivity"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Create a New Activity" />

                <item
                    android:id="@+id/progressReports"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Progress Reports" />

                <item
                    android:id="@+id/suggestedWorkouts"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Suggested Workouts" />
            </menu>
        </item>
        <item android:title="Friends">
            <menu>
                <item
                    android:id="@+id/friendsList"
                    android:icon="@drawable/friend"
                    android:title="@string/friends" />
                <item
                    android:id="@+id/compareWorkouts"
                    android:icon="@drawable/compare_w"
                    android:title="@string/compare" />
                <item
                    android:id="@+id/notFriendsList"
                    android:icon="@drawable/users"
                    android:title="@string/add_friends" />
            </menu>
        </item>
        <item android:title="Options">
            <menu>
                <item
                    android:id="@+id/logoutFromDashboard"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>
