<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.pacemaker.controllers.CompareWorkouts">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/userLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/mainUserActivities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:text="@string/activities"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/friendsActivities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:text="@string/activities"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/activitiesListViewLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLinearLayout"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <ListView
                android:id="@+id/mainUserActivitiesListView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.475" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.025" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FF0000FF" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.025" />


            <ListView
                android:id="@+id/friendsActivitiesListView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.475" />

        </LinearLayout>


        <TextView
            android:id="@+id/lastWeekOfWorkouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/activitiesListViewLinearLayout"
            android:layout_marginTop="20dp"
            android:text="@string/lastWeekWorkout"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/weekLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastWeekOfWorkouts"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/mainUserLastWeekOfWorkouts"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.475" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.025" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FF0000FF" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.025" />

            <TextView
                android:id="@+id/friendLastWeekOfWorkouts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.475" />

        </LinearLayout>


        <TextView
            android:id="@+id/lastMonthOfWorkouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/weekLinearLayout"
            android:layout_marginTop="20dp"
            android:text="@string/lastMonthWorkout"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/monthLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastMonthOfWorkouts"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/mainUserLastMonthOfWorkouts"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.475" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.025" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FF0000FF" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.025" />

            <TextView
                android:id="@+id/friendLasMonthOfWorkouts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.475" />

        </LinearLayout>

        <TextView
            android:id="@+id/overallWorkouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/monthLinearLayout"
            android:layout_marginTop="20dp"
            android:text="@string/OverallWorkout"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/overallTimeLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overallWorkouts"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/mainUserOverallWorkouts"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.475" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.025" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FF0000FF" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.025" />

            <TextView
                android:id="@+id/friendOverallWorkouts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.475" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
